--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <!-- FONT AWESOME CDN
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   
-        <!-- <script src="../leaflet/leaflet.js"></script>
-        <link rel="stylesheet" href="../leaflet/leaflet.css" /> -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
-        <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
+        <script src="libs/leaflet/leaflet.js"></script>
+        <link rel="stylesheet" href="libs/leaflet/leaflet.css" />
+        <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
+        <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script> -->
 
-        <script src="../leaflet/Leaflet.Control.Custom.js"></script>
+        <script src="libs/leaflet/Leaflet.Control.Custom.js"></script>
        
         <!-- <style>
             html, body {
@@ -46,15 +46,15 @@
         body { padding: 0; margin: 0; } html, body, .map { height: 100%; width: 100%; }
         .info { padding: 6px 16px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } .info h4 { margin: 0 0 5px; color: #777; }
         .legend { text-align: left; line-height: 18px; color: #555; } .legend i { width: 18px; height: 18px; float: left; margin-right: 8px; opacity: 0.7; }
-        .button { text-align: center; line-height: 25px; color: black; background: white; font: 30px/32px Arial, Helvetica, sans.serif; border-radius: 5px; box-shadow: 0 0 15px black; padding: 6px 8px;}
+        .button { text-align: center; line-height: 25px; color: black; background: white; font: 30px/32px Arial, Helvetica, sans-serif; border-radius: 5px; box-shadow: 0 0 15px black; padding: 6px 8px;}
         </style>
         
-        <!-- <script type="text/javascript" src="../tile.stamen.js?v1.3.0"></script> -->
+        <!-- <script type="text/javascript" src="/libs/tile.stamen.js?v1.3.0"></script> -->
         <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
 
-        <script type="text/javascript" src="../p5.min.js"></script>
+        <script type="text/javascript" src="libs/p5/p5.min.js"></script>
         <script type="text/javascript" src="sketch.js"></script>
-        <script type="text/javascript" src="../addons/p5.dom.min.js"></script>
+        <script type="text/javascript" src="libs/p5/addons/p5.dom.min.js"></script>
 
 </head>
     <body>
