--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         .button { text-align: center; line-height: 25px; color: black; background: white; font: 30px/32px Arial, Helvetica, sans-serif; border-radius: 5px; box-shadow: 0 0 15px black; padding: 6px 8px;}
         </style>
         
-        <script type="text/javascript" src="/libs/tile.stamen.js"></script>
+        <script type="text/javascript" src="libs/tile.stamen.js"></script>
         <!-- <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script> -->
 
         <script type="text/javascript" src="libs/p5/p5.min.js"></script>
